infrastructure/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: momo-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: momo-backend
  template:
    metadata:
      labels:
        app: momo-backend
    spec:
      containers:
      - name: backend
        image: ${CI_REGISTRY_IMAGE}/backend:latest
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: momo-backend-service
spec:
  selector:
    app: momo-backend
  ports:
  - port: 8081
    targetPort: 8081
