infrastructure/k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: momo-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: momo-frontend
  template:
    metadata:
      labels:
        app: momo-frontend
    spec:
      containers:
      - name: frontend
        image: ${CI_REGISTRY_IMAGE}/frontend:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: momo-frontend-service
spec:
  selector:
    app: momo-frontend
  ports:
  - port: 80
    targetPort: 80
