infrastructure/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: momo-store-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: "84.252.139.116.nip.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: momo-frontend-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: momo-backend-service
            port:
              number: 8081
